--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
   inputs:
     command: custom
     custom: tool
-    arguments: install --tool-path . dotnet-reportgenerator-globaltool
+    arguments: install dotnet-reportgenerator-globaltool --tool-path .
   displayName: Install ReportGenerator tool
   
 - script: reportgenerator -reports:$(Agent.TempDirectory)/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/coverlet/reports -reporttypes:"Cobertura"
