--- a/AdventOfCode.Days/AdventOfCode.Days.csproj
+++ b/AdventOfCode.Days/AdventOfCode.Days.csproj
@@ -15,6 +15,9 @@
       <None Update="2020\1\input.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="2020\2\input.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
