--- a/AdventOfCode.Days/AdventOfCode.Days.csproj
+++ b/AdventOfCode.Days/AdventOfCode.Days.csproj
@@ -27,6 +27,9 @@
       <None Update="2020\5\input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="2020\6\input.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
