--- a/AdventOfCode.Days/AdventOfCode.Days.csproj
+++ b/AdventOfCode.Days/AdventOfCode.Days.csproj
@@ -34,6 +34,9 @@
       <None Update="2020\7\input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="2020\8\input.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
