--- a/AdventOfCode.Days/AdventOfCode.Days.csproj
+++ b/AdventOfCode.Days/AdventOfCode.Days.csproj
@@ -43,6 +43,9 @@
       <None Update="2020\10\input.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="2020\11\input.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
