Implement a new way of displaying results using command line arguments

--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <PackageReference Include="Combinatorics" Version="2.0.0" />
+      <PackageReference Include="CommandLineParser" Version="2.8.0" />
       <PackageReference Include="XAct.Wintellect.PowerCollections" Version="0.0.1" />
     </ItemGroup>
 
