--- a/AdventOfCode.Days/AdventOfCode.Days.csproj
+++ b/AdventOfCode.Days/AdventOfCode.Days.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <LangVersion>11</LangVersion>
+        <TargetFramework>net9.0</TargetFramework>
+        <LangVersion>default</LangVersion>
         <Nullable>warnings</Nullable>
     </PropertyGroup>
 
