--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
-        <LangVersion>11</LangVersion>
+        <TargetFramework>net9.0</TargetFramework>
+        <LangVersion>default</LangVersion>
         <Nullable>warnings</Nullable>
     </PropertyGroup>
 
